--- a/WebContent/mainStyle.css
+++ b/WebContent/mainStyle.css
@@ -2,6 +2,7 @@
 
 body {
 	font-family: courier new;
+	background-color: #DDDDDD;
 }
 
 h1 {
@@ -27,13 +28,24 @@ input[type="submit"]{
 	width: auto;
 	font-family: courier new;
 	font-size: 1em;
-	border-radius: 3em;
+	background-color: #FFFFFF;
+	border-style: dotted;
+	border-width: 0.1em;
+	position: relative;
+	top: 1em;
 }
+
+input[type="submit"]:hover {
+	background-color: #EEEEEE;
+}
+
 
 input[type="text"], input[type="password"]{
 	padding: 0.2em;
 	font-family: courier new;
 	font-size: 1em;
+	border-style: none none dotted none;
+	border-width: 0.1em;
 }
 
 form {
@@ -42,13 +54,16 @@ form {
 
 .mainbody{
 	width: 40%;
-	padding: 2em;
+	padding: 3em 0em;
 	margin: auto;
+	background-color: #FFFFFF;
+	
 }
 
 .loginbox{
 	margin: 0.5em auto;
 	text-align: center;
+	background-color: #FFFFFF;
 }
 
 .inputrow{
